src/test/deca/context/valid/type_identifier_01_so.deca
// Description:
//    Tester l'identificateur de type lors de la déclaration de variable.
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 13/01/2023

{
int i;
float f;
boolean b;
}